[package]
name = "yew_frontend"
workspace = ".."
version = "0.1.0"
edition = "2021"

[features]
audio = [ "client_util/audio" ]
default = [ "zoom" ]
zoom = [ "yew_icons/BootstrapZoomIn", "yew_icons/BootstrapZoomOut" ]

[dependencies]
client_util = { path = "../client_util", default-features = false }
core_protocol = { path = "../core_protocol" }
engine_macros = { path = "../engine_macros" }
gloo = "0.8"
gloo-events = "0.1"
gloo-render = "0.1"
itertools = "0.10"
js-sys = "0.3"
js_hooks = { path = "../js_hooks" }
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
stylist = { version = "0.11", features = [ "yew_integration", "macros" ], default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = {version = "0.20.0", features = ["csr"]}
yew_icons = { version = "0.7", features = [
    "BootstrapDiscord",
    "BootstrapGear",
    "BootstrapGithub",
    "BootstrapGlobe2",
    "BootstrapPersonPlus",
    "BootstrapVolumeDownFill",
    "BootstrapVolumeMute",
    "BootstrapVolumeUpFill",
    "FontAwesomeSolidSquareCaretLeft",
    "FontAwesomeSolidSquareCaretRight",
]}
yew-router = "0.17.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Clipboard',
    'FocusEvent',
    'HtmlSelectElement',
    'Location',
    'MessageEvent',
    'Navigator',
    'PromiseRejectionEvent',
    'UiEvent',
    'VisibilityState',
    'Window',
]

[dev-dependencies]
rand = "0.8"
