[package]
name = "example"
workspace = "../.."
version = "0.1.0"
edition = "2021"
authors = ["Softbear, Inc."]
license = "AGPL-3.0-or-later"

[dependencies]
glam = "0.18"
js_hooks = { path = "../../js_hooks" }
renderer = { path = "../../renderer", features = [ "blocking" ] } # uses blocking to wait until shaders are compiled
renderer2d = { path = "../../renderer2d" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
